--- a/src/view/custom-bootstrap/custom-bootstrap.css
+++ b/src/view/custom-bootstrap/custom-bootstrap.css
@@ -6,6 +6,14 @@ footer {
     margin: 50px 0;
 }
 
+.bg-grey {
+    background-color: lightgray;
+}
+
+.bg-red {
+    background-color: lightcoral;
+}
+
 .navbar {
     background-color: #e74c3c;
     border-color: #c0392b;
