--- a/src/view/custom-bootstrap/custom-bootstrap.css
+++ b/src/view/custom-bootstrap/custom-bootstrap.css
@@ -1,5 +1,6 @@
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    background-image: url('/../../../src/view/image/f1logo.jpg');
 }
 
 footer {
@@ -8,6 +9,10 @@ footer {
 
 .bg-grey {
     background-color: lightgray;
+}
+
+.bg-white {
+    background-color: whitesmoke;
 }
 
 .bg-red {
