--- a/src/view/custom-bootstrap/custom-bootstrap.css
+++ b/src/view/custom-bootstrap/custom-bootstrap.css
@@ -7,6 +7,13 @@ footer {
     margin: 50px 0;
 }
 
+table caption {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    color: #e74c3c;
+    text-align: left;
+}
+
 .bg-grey {
     background-color: lightgray;
 }
