--- a/src/view/custom-bootstrap/custom-bootstrap.css
+++ b/src/view/custom-bootstrap/custom-bootstrap.css
@@ -1,6 +1,6 @@
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-    background-image: url('/../../../src/view/image/f1logo.jpg');
+    background-image: url('/../../../src/view/image/background.jpg');
 }
 
 footer {
@@ -15,20 +15,79 @@ table caption {
 }
 
 .bg-grey {
-    background-color: lightgray;
+    background-color: rgba(1, 1, 1, .1);
 }
 
 .bg-white {
-    background-color: whitesmoke;
+    background-color: rgba(1, 1, 1, .0);
 }
 
-.bg-red {
-    background-color: lightcoral;
+.bg-danger {
+    background-color: rgba(240, 128, 128, .3);
+}
+
+.bg-success {
+    background-color: rgba(223, 240, 216, .3);
 }
 
 .navbar {
-    background-color: #e74c3c;
-    border-color: #c0392b;
+    background-color: rgba(1, 1, 1, .65);
+    border-color: rgba(1, 1, 1, .75);
+}
+
+.panel-default {
+    border-color: black;
+    background-color: rgba(1, 1, 1, .65);
+    z-index: 1;
+    color: white;
+}
+.panel-default > .panel-heading {
+    color: orange;
+    background-color: rgba(1, 1, 1, .4);
+    border-color: black;
+}
+.panel-default > .panel-heading + .panel-collapse > .panel-body {
+    border-top-color: #ddd;
+
+}
+.panel-default > .panel-heading .badge {
+    color: #f5f5f5;
+    background-color: transparent;
+}
+.panel-default > .panel-footer + .panel-collapse > .panel-body {
+    border-bottom-color: #ddd;
+}
+
+.panel > .table-responsive + .panel-body {
+    border-top: 0px;
+}
+
+.table-striped > tbody > tr:nth-of-type(odd) {
+    background-color: rgba(1, 1, 1, .3);
+}
+
+.table > thead > tr > th,
+.table > tbody > tr > th,
+.table > tfoot > tr > th,
+.table > thead > tr > td,
+.table > tbody > tr > td,
+.table > tfoot > tr > td {
+    padding: 5px;
+    line-height: 1.42857143;
+    vertical-align: top;
+    border-top: 0;
+    color: white;
+}
+
+.table > tfoot > tr > td {
+    padding: 8px;
+    line-height: 1.42857143;
+    vertical-align: top;
+    border-top: 0px solid #ddd;
+}
+
+.panel-body {
+    padding: 0px;
 }
 
 .navbar .navbar-brand {
@@ -62,23 +121,23 @@ table caption {
 .navbar .navbar-nav > .active > a:hover,
 .navbar .navbar-nav > .active > a:focus {
     color: #ffbbbc;
-    background-color: #c0392b;
+    background-color: rgba(1, 1, 1, .65);;
 }
 
 .navbar .navbar-nav > .open > a,
 .navbar .navbar-nav > .open > a:hover,
 .navbar .navbar-nav > .open > a:focus {
     color: #ffbbbc;
-    background-color: #c0392b;
+    background-color: rgba(1, 1, 1, .65);;
 }
 
 .navbar .navbar-toggle {
-    border-color: #c0392b;
+    border-color: rgba(1, 1, 1, .65);;
 }
 
 .navbar .navbar-toggle:hover,
 .navbar .navbar-toggle:focus {
-    background-color: #c0392b;
+    background-color: rgba(1, 1, 1, .65);;
 }
 
 .navbar .navbar-toggle .icon-bar {
@@ -112,7 +171,7 @@ table caption {
     .navbar .navbar-nav .open .dropdown-menu > .active > a:hover,
     .navbar .navbar-nav .open .dropdown-menu > .active > a:focus {
         color: #ffbbbc;
-        background-color: #c0392b;
+        background-color: rgba(1, 1, 1, .65);;
     }
 }
 
