--- a/src/view/custom-bootstrap/custom-bootstrap.css
+++ b/src/view/custom-bootstrap/custom-bootstrap.css
@@ -1,6 +1,8 @@
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
     background-image: url('/../../../src/view/image/background.jpg');
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 footer {
@@ -14,56 +16,190 @@ table caption {
     text-align: left;
 }
 
+.color-one {
+    color: yellow;
+}
+
+.color-two {
+    color: cyan;
+}
+
 .bg-grey {
-    background-color: rgba(1, 1, 1, .1);
+    background-color: rgba(1, 1, 1, .8);
 }
 
 .bg-white {
     background-color: rgba(1, 1, 1, .0);
 }
 
-.bg-danger {
-    background-color: rgba(240, 128, 128, .3);
+.bg-one {
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 .bg-success {
     background-color: rgba(223, 240, 216, .3);
 }
 
+.bet-empty {
+    color: yellow;
+    background-color: rgba(0, 0, 0, .1);
+}
+
+.bet-empty-font {
+    font-style: italic;
+}
+
+.bet-high {
+    font-weight: bold;
+    color: yellow;
+    background-color: rgba(184, 33, 29, .4);
+}
+
+.bet-high-font {
+    font-weight: bold;
+}
+
+.bet-low {
+    color: yellow;
+    font-weight: bold;
+    background-color: rgba(0, 255, 0, .20);
+}
+
+.bet-low-font {
+    font-weight: bold;
+}
+
 .navbar {
-    background-color: rgba(1, 1, 1, .65);
-    border-color: rgba(1, 1, 1, .75);
+    background-color: rgba(184, 33, 29, .9);
+    border: 0;
+}
+
+.btn-new {
+    color: #FFFFFF;
+    background-color: #8C0501;
+    border-color: #8C0501;
+}
+
+.btn-new:hover,
+.btn-new:focus,
+.btn-new:active,
+.btn-new.active,
+.open .dropdown-toggle.btn-new {
+    color: #FFFFFF;
+    background-color: rgba(184, 33, 29, .9);
+    border-color: rgba(184, 33, 29, .9);
+}
+
+.btn-new:active,
+.btn-new.active,
+.open .dropdown-toggle.btn-new {
+    background-image: none;
+}
+
+.btn-new.disabled,
+.btn-new[disabled],
+fieldset[disabled] .btn-new,
+.btn-new.disabled:hover,
+.btn-new[disabled]:hover,
+fieldset[disabled] .btn-new:hover,
+.btn-new.disabled:focus,
+.btn-new[disabled]:focus,
+fieldset[disabled] .btn-new:focus,
+.btn-new.disabled:active,
+.btn-new[disabled]:active,
+fieldset[disabled] .btn-new:active,
+.btn-new.disabled.active,
+.btn-new[disabled].active,
+fieldset[disabled] .btn-new.active {
+    background-color: #8C0501;
+    border-color: #8C0501;
+}
+
+.btn-new .badge {
+    color: #8C0501;
+    background-color: #FFFFFF;
+}
+
+.btn {
+    border-radius: 0px;
 }
 
 .panel-default {
-    border-color: black;
-    background-color: rgba(1, 1, 1, .65);
-    z-index: 1;
+    border: 0;
+    border-radius: 0;
+    /*background-color: rgba(103, 99, 99, .75);*/
+    background-color: rgba(0, 0, 0, .75);
+    z-index: .1;
     color: white;
+    margin-bottom: 0;
 }
+
 .panel-default > .panel-heading {
-    color: orange;
-    background-color: rgba(1, 1, 1, .4);
-    border-color: black;
+    color: rgba(255, 255, 255, .75);;
+    background-color: rgb(140, 5, 1);
+    border-radius: 0px;
+    border: 0px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
+
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
-    border-top-color: #ddd;
+    /*border-top-color: #ddd;*/
 
 }
+
 .panel-default > .panel-heading .badge {
-    color: #f5f5f5;
+    /*color: #f5f5f5;*/
     background-color: transparent;
 }
+
 .panel-default > .panel-footer + .panel-collapse > .panel-body {
-    border-bottom-color: #ddd;
+    /*border-bottom-color: #ddd;*/
 }
 
 .panel > .table-responsive + .panel-body {
     border-top: 0px;
 }
 
+.result-striped > tbody > tr:nth-of-type(odd) > td:nth-of-type(1){
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.result-striped > tbody > tr:nth-of-type(odd) > td:nth-of-type(2){
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
 .table-striped > tbody > tr:nth-of-type(odd) {
-    background-color: rgba(1, 1, 1, .3);
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+
+.table {
+    margin-bottom: 0;
+}
+
+.img-responsive {
+    margin-bottom: 0;
+}
+
+.dropdown-menu {
+    color: white;
+    background-color: rgba(184, 33, 29, .9);
+    border-color: rgba(184, 33, 29, .9);
+}
+
+.dropdown-menu > li > a{
+    color: white;
+    font-weight: bold;
+    background-color: rgba(184, 33, 29, .9);
+    border-color: rgba(184, 33, 29, .9);
+}
+
+.dropdown-menu > li > a:hover{
+    color: yellow;
+    font-weight: bold;
+    background-color: rgba(0, 0, 0, .2);
+    border-color: rgba(0, 0, 0, .2);
 }
 
 .table > thead > tr > th,
@@ -86,6 +222,10 @@ table caption {
     border-top: 0px solid #ddd;
 }
 
+.form-input {
+    background-color: black;
+}
+
 .panel-body {
     padding: 0px;
 }
@@ -105,30 +245,36 @@ table caption {
 }
 
 .navbar .navbar-text {
-    color: #ecf0f1;
+    color:white;
 }
 
 .navbar .navbar-nav > li > a {
-    color: #ecf0f1;
+    font-weight: bold;
+    color: white;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .navbar .navbar-nav > li > a:hover,
 .navbar .navbar-nav > li > a:focus {
-    color: #ffbbbc;
+    color: yellow;
+    padding-right: 10px;
+    padding-left: 10px;
+    background-color: rgba(1, 1, 1, .1);
 }
 
 .navbar .navbar-nav > .active > a,
 .navbar .navbar-nav > .active > a:hover,
 .navbar .navbar-nav > .active > a:focus {
-    color: #ffbbbc;
-    background-color: rgba(1, 1, 1, .65);;
+    color: yellow;
+    background-color: rgba(1, 1, 1, .2);
 }
 
 .navbar .navbar-nav > .open > a,
 .navbar .navbar-nav > .open > a:hover,
 .navbar .navbar-nav > .open > a:focus {
-    color: #ffbbbc;
-    background-color: rgba(1, 1, 1, .65);;
+    color: yellow;
+    background-color: rgba(1, 1, 1, .2);;
 }
 
 .navbar .navbar-toggle {
@@ -154,7 +300,7 @@ table caption {
 }
 
 .navbar .navbar-link:hover {
-    color: #ffbbbc;
+    color: yellow;
 }
 
 @media (max-width: 767px) {
@@ -164,14 +310,21 @@ table caption {
 
     .navbar .navbar-nav .open .dropdown-menu > li > a:hover,
     .navbar .navbar-nav .open .dropdown-menu > li > a:focus {
-        color: #ffbbbc;
+        color: yellow;
     }
 
     .navbar .navbar-nav .open .dropdown-menu > .active > a,
     .navbar .navbar-nav .open .dropdown-menu > .active > a:hover,
     .navbar .navbar-nav .open .dropdown-menu > .active > a:focus {
-        color: #ffbbbc;
+        color: yellow;
         background-color: rgba(1, 1, 1, .65);;
+    }
+
+    .table-responsive {
+        padding: 8px;
+        line-height: 1.42857143;
+        vertical-align: top;
+        border: 0px;
     }
 }
 
@@ -183,10 +336,10 @@ table caption {
 a.glyphicon {
     text-decoration: none;
     font-size: 1.5em;
-    color: #c0392b;
+    color: rgba(255, 255, 255, .45);
 }
 
 a:hover.glyphicon {
-    color: #e74c3c;
+    color: white;
     cursor: pointer;
 }
