--- a/src/view/custom-bootstrap/custom-bootstrap.css
+++ b/src/view/custom-bootstrap/custom-bootstrap.css
@@ -331,6 +331,7 @@ fieldset[disabled] .btn-new.active {
         padding: 0px;
         line-height: 1.42857143;
         vertical-align: top;
+        margin-bottom: 0px;
         border: 0px;
     }
 }
