--- a/src/view/custom-bootstrap/custom-bootstrap.css
+++ b/src/view/custom-bootstrap/custom-bootstrap.css
@@ -383,3 +383,17 @@ a:hover.glyphicon {
     color: white;
     background-color: rgba(255, 255, 255, .2);
 }
+
+.container-yt {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+.video-yt {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
