--- a/src/view/custom-bootstrap/custom-bootstrap.css
+++ b/src/view/custom-bootstrap/custom-bootstrap.css
@@ -352,48 +352,35 @@ a:hover.glyphicon {
     cursor: pointer;
 }
 
-.custom-scrollbar::-webkit-scrollbar-track
-{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+.custom-scrollbar::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     background-color: rgba(255, 255, 255, .1);
 }
 
-.custom-scrollbar::-webkit-scrollbar
-{
+.custom-scrollbar::-webkit-scrollbar {
     width: 12px;
     background-color: rgba(255, 255, 255, .1);
 }
 
-.custom-scrollbar::-webkit-scrollbar-thumb
-{
+.custom-scrollbar::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
     background-color: rgb(140, 5, 1);
 }
 
-.form-control{
+.form-control {
     font-weight: bold;
     color: white;
     background-color: #303030;
 }
 
-.form-control:disabled{
+.form-control:disabled {
     font-weight: bold;
     color: white;
     background-color: rgba(255, 255, 255, .2);
 }
 
-.container-yt {
-    position: relative;
-    width: 100%;
-    height: 0;
-    padding-bottom: 56.25%;
-}
-.video-yt {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+a.feed_source {
+    color: rgba(255, 255, 255, .75);
 }
