Alternative Point System

--- a/src/view/custom-bootstrap/custom-bootstrap.css
+++ b/src/view/custom-bootstrap/custom-bootstrap.css
@@ -24,6 +24,10 @@ table caption {
     color: cyan;
 }
 
+.color-three {
+    color: red;
+}
+
 .bg-grey {
     background-color: rgba(1, 1, 1, .8);
 }
